--- a/Ingredients.html
+++ b/Ingredients.html
@@ -39,19 +39,19 @@
       </div>
       <div class="row">
         <div class="two columns">&nbsp;</div>
-        <div class="eight columns"><a href="About.html">About</a>
-<a href="Assembling-a-Mosaic-of-the-Future-The-Post-Nuclear-World-of-Fallout-3.html">Assembling a Mosaic of the Future The Post Nuclear World of Fallout 3</a>
-<a href="Chasing-Aurora.html">Chasing Aurora</a>
-<a href="Cuneiformer.html">Cuneiformer</a>
-<a href="Electroplankton revisited.html">Electroplankton revisited</a>
-<a href="Grand-Theft-Auto-IV-Considered-as-an-Atrocity-Exhibition.html">Grand Theft Auto IV Considered as an Atrocity Exhibition</a>
-<a href="Home.html">Home</a>
-<a href="Levels-of-Sound.html">Levels of Sound</a>
-<a href="Me.html">Me</a>
-<a href="Secrets-Of-Raetikon.html">Secrets Of Raetikon</a>
-<a href="Todo.html">Todo</a>
-<a href="Yet-It-Moves.html">Yet It Moves</a>
-</div>
+        <div class="eight columns"><ul><li><a href="About.html">About</a></li>
+<li><a href="Assembling-a-Mosaic-of-the-Future-The-Post-Nuclear-World-of-Fallout-3.html">Assembling a Mosaic of the Future The Post Nuclear World of Fallout 3</a></li>
+<li><a href="Chasing-Aurora.html">Chasing Aurora</a></li>
+<li><a href="Cuneiformer.html">Cuneiformer</a></li>
+<li><a href="Electroplankton revisited.html">Electroplankton revisited</a></li>
+<li><a href="Grand-Theft-Auto-IV-Considered-as-an-Atrocity-Exhibition.html">Grand Theft Auto IV Considered as an Atrocity Exhibition</a></li>
+<li><a href="Home.html">Home</a></li>
+<li><a href="Levels-of-Sound.html">Levels of Sound</a></li>
+<li><a href="Me.html">Me</a></li>
+<li><a href="Secrets-Of-Raetikon.html">Secrets Of Raetikon</a></li>
+<li><a href="Todo.html">Todo</a></li>
+<li><a href="Yet-It-Moves.html">Yet It Moves</a></li>
+</ul></div>
         <div class="two columns">&nbsp;</div>
       </div>
       <div class="row">
