Updated FAZE etc

--- a/FAZE.html
+++ b/FAZE.html
@@ -21,7 +21,7 @@
     <script src="/javascript/jquery.tabs.js" type="text/javascript"></script>
     <script src="/javascript/gollum.js" type="text/javascript"></script>
     <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
-    <title>Todo</title>
+    <title>FAZE</title>
   </head>
 
   <body>
@@ -32,59 +32,32 @@
             <a href="/Home.html"><div id="header">&nbsp;
             </div></a>
             <hr />
-            <h4>Todo</h4>
+            <h4>FAZE</h4>
             <hr />
         </div>
         <div class="two columns">&nbsp;</div>
       </div>
       <div class="row">
         <div class="two columns">&nbsp;</div>
-        <div class="eight columns"><h2>Pages added</h2>
+        <div class="eight columns"><p>Throughout 2014 I ran a sadly short-lived series of events called FAZE together with <a href="http://www.perfectplum.com">Heather Kelley</a>. There were three FAZE events, each dedicated to a different theme: </p>
 
 <ul>
-<li>Secrets of Raetikon </li>
-<li>Yet It Moves</li>
-<li>Chasing Aurora</li>
-<li>Electroplankton revisited: A Meta-Review</li>
-<li>DiGRA-MusicGames</li>
-<li>Eludamos-GTA</li>
-<li>Eludamos-Fallout</li>
-<li>HLL-TheBorderland</li>
-<li>MediaTerra-Appropriation</li>
-<li>FROG-PlayingMusicPlayingGames</li>
-<li>Monochrom-PinballHistory</li>
-<li>Clones &amp; Drones</li>
-<li>Player-EmotionsAndPlayer</li>
-<li>FAZE</li>
+<li>FAZE.ONE Olfactory Overload</li>
+<li>FAZE.TWO It's All Fluxus Until Someone Cries</li>
+<li>FAZE.THREE Acoustic Architecture</li>
 </ul>
 
-<h2>Pages to add</h2>
+<p><img src="img/projects/faze0.jpeg" alt="Faze 0">
+<img src="img/projects/faze1.jpeg" alt="Faze 1">
+<img src="img/projects/faze2.jpeg" alt="Faze 2">
+<img src="img/projects/faze3.jpeg" alt="Faze 3">
+<img src="img/projects/faze4.jpeg" alt="Faze 4">
+<img src="img/projects/faze5.jpeg" alt="Faze 5">
+<img src="img/projects/faze6.jpeg" alt="Faze 6"></p>
 
-<ul>
-<li>Story of Raetikon -&gt; Rename</li>
-<li>Globetrotters</li>
-<li>Dissertation</li>
-<li>MGNT 
-– HPST 
-– BLCK</li>
-<li>The Danish Mountains</li>
-<li>Ocean Floor</li>
-<li>The Silence</li>
-<li>Bagatelle Concrete</li>
-<li>Seven Mile Boots</li>
-<li>Approximating a Steam Engine</li>
-<li>Vireal</li>
-<li>Lichtzeile</li>
-<li>PIONEER</li>
-<li>Blek</li>
-<li>Studio Radiolaris</li>
-<li>Radio Flare</li>
-<li>Radio Flare REDUX</li>
-<li>Zombies vs. Sheep</li>
-<li>Enlightenment</li>
-<li>Red Star</li>
-<li>Ginkgo</li>
-</ul>
+<p>Images by <a href="http://www.emotionstante.com">Karin Jarnig</a></p>
+
+<p>We abandoned the event series after both of us left Vienna to start working at two different universities – she went to Pittsburgh whereas I headed to Copenhagen.</p>
 </div>
         <div class="two columns">&nbsp;</div>
       </div>
