--- a/Ingredients.html
+++ b/Ingredients.html
@@ -46,8 +46,10 @@
 <li><a href="Cuneiformer.html">Cuneiformer</a></li>
 <li><a href="Democracy-3-Clones-And-Drones.html">Democracy 3 Clones And Drones</a></li>
 <li><a href="Electroplankton-revisited.html">Electroplankton revisited</a></li>
+<li><a href="FAZE.html">FAZE</a></li>
 <li><a href="Grand-Theft-Auto-IV-Considered-as-an-Atrocity-Exhibition.html">Grand Theft Auto IV Considered as an Atrocity Exhibition</a></li>
 <li><a href="Home.html">Home</a></li>
+<li><a href="Intentions,-Expectations-and-the-Player.html">Intentions, Expectations and the Player</a></li>
 <li><a href="Levels-of-Sound.html">Levels of Sound</a></li>
 <li><a href="Me.html">Me</a></li>
 <li><a href="Playing-Music-and-Playing-Games.html">Playing Music and Playing Games</a></li>
