--- a/Intentions,-Expectations-and-the-Player.html
+++ b/Intentions,-Expectations-and-the-Player.html
@@ -21,7 +21,7 @@
     <script src="/javascript/jquery.tabs.js" type="text/javascript"></script>
     <script src="/javascript/gollum.js" type="text/javascript"></script>
     <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
-    <title>Todo</title>
+    <title>Intentions, Expectations and the Player</title>
   </head>
 
   <body>
@@ -32,59 +32,22 @@
             <a href="/Home.html"><div id="header">&nbsp;
             </div></a>
             <hr />
-            <h4>Todo</h4>
+            <h4>Intentions, Expectations and the Player</h4>
             <hr />
         </div>
         <div class="two columns">&nbsp;</div>
       </div>
       <div class="row">
         <div class="two columns">&nbsp;</div>
-        <div class="eight columns"><h2>Pages added</h2>
+        <div class="eight columns"><p>Intentions, Expectations and the Player is a paper I've written with Fares Kayali.</p>
 
-<ul>
-<li>Secrets of Raetikon </li>
-<li>Yet It Moves</li>
-<li>Chasing Aurora</li>
-<li>Electroplankton revisited: A Meta-Review</li>
-<li>DiGRA-MusicGames</li>
-<li>Eludamos-GTA</li>
-<li>Eludamos-Fallout</li>
-<li>HLL-TheBorderland</li>
-<li>MediaTerra-Appropriation</li>
-<li>FROG-PlayingMusicPlayingGames</li>
-<li>Monochrom-PinballHistory</li>
-<li>Clones &amp; Drones</li>
-<li>Player-EmotionsAndPlayer</li>
-<li>FAZE</li>
-</ul>
+<blockquote>
+<p>The human emotional landscape is vast and complex. Games successfully elicit feelings. Future research into the dramaturgy of games and its relation to emotional experiences might yield even more tools, tech- niques, and strategies that allow game designers to consciously maximise the expectations of the players, leading to ever more involvement and emotional depth.</p>
+</blockquote>
 
-<h2>Pages to add</h2>
+<p>Pichlmair, M. &amp; Kayali, F.: Intentions, Expectations and the Player. In: Proceedings of the [player] Conference, August 26-28, 2008, Copenhagen, Denkmark.</p>
 
-<ul>
-<li>Story of Raetikon -&gt; Rename</li>
-<li>Globetrotters</li>
-<li>Dissertation</li>
-<li>MGNT 
-– HPST 
-– BLCK</li>
-<li>The Danish Mountains</li>
-<li>Ocean Floor</li>
-<li>The Silence</li>
-<li>Bagatelle Concrete</li>
-<li>Seven Mile Boots</li>
-<li>Approximating a Steam Engine</li>
-<li>Vireal</li>
-<li>Lichtzeile</li>
-<li>PIONEER</li>
-<li>Blek</li>
-<li>Studio Radiolaris</li>
-<li>Radio Flare</li>
-<li>Radio Flare REDUX</li>
-<li>Zombies vs. Sheep</li>
-<li>Enlightenment</li>
-<li>Red Star</li>
-<li>Ginkgo</li>
-</ul>
+<p><a href="https://www.academia.edu/4989138/Intentions_Expectations_and_the_Player">Read</a></p>
 </div>
         <div class="two columns">&nbsp;</div>
       </div>
