Added iOS and art projects

--- a/Approximating-a-Steam-Engine.html
+++ b/Approximating-a-Steam-Engine.html
@@ -21,7 +21,7 @@
     <script src="/javascript/jquery.tabs.js" type="text/javascript"></script>
     <script src="/javascript/gollum.js" type="text/javascript"></script>
     <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
-    <title>Assembling a Mosaic of the Future The Post Nuclear World of Fallout 3</title>
+    <title>Approximating a Steam Engine</title>
   </head>
 
   <body>
@@ -32,25 +32,25 @@
             <a href="/Home.html"><div id="header">&nbsp;
             </div></a>
             <hr />
-            <h4>Assembling a Mosaic of the Future The Post Nuclear World of Fallout 3</h4>
+            <h4>Approximating a Steam Engine</h4>
             <hr />
         </div>
         <div class="two columns">&nbsp;</div>
       </div>
       <div class="row">
         <div class="two columns">&nbsp;</div>
-        <div class="eight columns"><p>A stroll through the history of the atomic age and the wasteland of Fallout 3</p>
+        <div class="eight columns"><p>My contribution to <a href="http://manifesta7.it">MANIFESTA7</a> in Bozen/Bolzano, Italy.</p>
 
-<p><img src="img/papers/Fallout3.jpg" alt="Operation Crossroads">
-<a href="http://en.wikipedia.org/wiki/Nuclear_weapons_testing#/media/File:Operation_Crossroads_Baker_Edit.jpg">Image Source</a></p>
+<p><img src="img/projects/steam-engine-0.jpg" alt="Steam Engine"></p>
 
-<blockquote>
-<p>The Manhattan Project succeeded in building a nuclear bomb after three quick years of research. The United States rushed the program in order to get a lead on their competitors in this arms race. Germany was supposedly already close to building its own bomb. Yet even the inventors of the first atomic bomb were overwhelmed by its destructive power. J. Robert Oppenheimer cited ... the Bhagavad-Gita "I am become death, the destroyer of worlds." upon witnessing the first test explosion.</p>
-</blockquote>
+<p>Cloud-spitting chimneys grow into smoke-darkened skies. Throbbing sounds from beating, churning, shifting machines fill the hazy air. Fire drives the engines, and steam spurts out. </p>
 
-<p>Pichlmair, M. 2009, Assembling a Mosaic of the Future: The Post-Nuclear World of Fallout 3. Eludamos. Journal for Computer Game Culture. 2009; 3 (1), p. 107-113</p>
+<p><img src="img/projects/steam-engine-1.jpg" alt="Steam Engine"></p>
 
-<p><a href="http://www.eludamos.org/index.php/eludamos/article/view/vol3no1-12/120">Read</a></p>
+<p>The fires have been fed with Welsh coal ever since the depletion of the Gwennap forests. The engines are pumping and hammering in the Cornish Mines: pulling out tin, copper, silver, zinc and arsenic. Departed things leave a memory, a slowly fading impression. 
+Denis Papin and Thomas Savery were steam-engine designers, quick to acquire patents for their machines. Thomas Newcomen installed <a href="http://www.egr.msu.edu/%7Elira/supp/steam/newcomen.htm">seventy-five engines</a> under their patent in English coal and lead mines. Between 1777 and 1801 <a href="http://www.egr.msu.edu/%7Elira/supp/steam/wattbio.html">James Watt and his business partner Matthew Boulton</a> erected forty-nine steam engines of their own patented design – a revision of the Newcomen engine – all over Cornwall. The mining companies’ engineers revolted when they realized they were forbidden to alter the engines. In 1800, James Watt’s patent expired, and collective invention began.</p>
+
+<p><a href="http://www.manifesta7.it/artists/389?page=1&amp;results_page=4&amp;search=vo">Read</a></p>
 </div>
         <div class="two columns">&nbsp;</div>
       </div>
