--- a/Bagatelle-Concrete.html
+++ b/Bagatelle-Concrete.html
@@ -21,7 +21,7 @@
     <script src="/javascript/jquery.tabs.js" type="text/javascript"></script>
     <script src="/javascript/gollum.js" type="text/javascript"></script>
     <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
-    <title>Assembling a Mosaic of the Future The Post Nuclear World of Fallout 3</title>
+    <title>Bagatelle Concrete</title>
   </head>
 
   <body>
@@ -32,25 +32,20 @@
             <a href="/Home.html"><div id="header">&nbsp;
             </div></a>
             <hr />
-            <h4>Assembling a Mosaic of the Future The Post Nuclear World of Fallout 3</h4>
+            <h4>Bagatelle Concrete</h4>
             <hr />
         </div>
         <div class="two columns">&nbsp;</div>
       </div>
       <div class="row">
         <div class="two columns">&nbsp;</div>
-        <div class="eight columns"><p>A stroll through the history of the atomic age and the wasteland of Fallout 3</p>
+        <div class="eight columns"><p>Bagatelle Concrète is a pinball machine turned musical instrument. Fares Kayali and I took a vintage pinball machine and removed everything that was not part of the gameplay core. Then we hooked up pickups and microphones to amplify that core experience – the pure physical joy of playing. Then we built loudspeakers and attached them to the machine. Bagatelle Concrète was exhibited in the <a href="http://www.laboralcentrodearte.org/en/exposiciones/homo-ludens-ludens">Homo Ludens Ludens</a> exhibition at the <a href="http://www.laboralcentrodearte.org/en">Centro de Arte y Creación Laboral</a> in Gijon, Spain. At the accompanying conference I spoke about <a href="Venturing-Into-The-Borderlands-Of-Playfulness.html">Venturing into the Borderlands of Playfulness</a>.</p>
 
-<p><img src="img/papers/Fallout3.jpg" alt="Operation Crossroads">
-<a href="http://en.wikipedia.org/wiki/Nuclear_weapons_testing#/media/File:Operation_Crossroads_Baker_Edit.jpg">Image Source</a></p>
+<p><img src="img/projects/bagatelle0.JPG" alt="Bagatelle Concrete 0">
+<img src="img/projects/bagatelle1.JPG" alt="Bagatelle Concrete 1">
+<img src="img/projects/bagatelle2.JPG" alt="Bagatelle Concrete 2"></p>
 
-<blockquote>
-<p>The Manhattan Project succeeded in building a nuclear bomb after three quick years of research. The United States rushed the program in order to get a lead on their competitors in this arms race. Germany was supposedly already close to building its own bomb. Yet even the inventors of the first atomic bomb were overwhelmed by its destructive power. J. Robert Oppenheimer cited ... the Bhagavad-Gita "I am become death, the destroyer of worlds." upon witnessing the first test explosion.</p>
-</blockquote>
-
-<p>Pichlmair, M. 2009, Assembling a Mosaic of the Future: The Post-Nuclear World of Fallout 3. Eludamos. Journal for Computer Game Culture. 2009; 3 (1), p. 107-113</p>
-
-<p><a href="http://www.eludamos.org/index.php/eludamos/article/view/vol3no1-12/120">Read</a></p>
+<p><a href="http://www.laboralcentrodearte.org/en/files/2008/exposiciones/homo-ludens-ludens-doc/HLL_cat_final.pdf-en">Read</a></p>
 </div>
         <div class="two columns">&nbsp;</div>
       </div>
