--- a/FAZE.html
+++ b/FAZE.html
@@ -39,7 +39,9 @@
       </div>
       <div class="row">
         <div class="two columns">&nbsp;</div>
-        <div class="eight columns"><p>Throughout 2014 I ran a sadly short-lived series of events called FAZE together with <a href="http://www.perfectplum.com">Heather Kelley</a>. There were three FAZE events, each dedicated to a different theme: </p>
+        <div class="eight columns"><p><img src="img/projects/faze-logo.png" alt="Faze Logo"></p>
+
+<p>Throughout 2014 I ran a sadly short-lived series of events called FAZE together with <a href="http://www.perfectplum.com">Heather Kelley</a>. There were three FAZE events, each dedicated to a different theme: </p>
 
 <ul>
 <li>FAZE.ONE Olfactory Overload</li>
@@ -65,7 +67,7 @@
         <div class="two columns">&nbsp;</div>
           <div class="eight columns">
             <div id="footer">
-              <small>2015-04-09 12:50:18</small>
+              <small>2015-04-15 11:41:06</small>
             </div>
           </div>
         <div class="two columns">&nbsp;</div>
