--- a/Ingredients.html
+++ b/Ingredients.html
@@ -41,7 +41,9 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns"><ul><li><a href="A-Game-of-Skill-and-Timing.html">A Game of Skill and Timing</a></li>
 <li><a href="About.html">About</a></li>
+<li><a href="Approximating-a-Steam-Engine.html">Approximating a Steam Engine</a></li>
 <li><a href="Assembling-a-Mosaic-of-the-Future-The-Post-Nuclear-World-of-Fallout-3.html">Assembling a Mosaic of the Future The Post Nuclear World of Fallout 3</a></li>
+<li><a href="Bagatelle-Concrete.html">Bagatelle Concrete</a></li>
 <li><a href="Chasing-Aurora.html">Chasing Aurora</a></li>
 <li><a href="Cuneiformer.html">Cuneiformer</a></li>
 <li><a href="Democracy-3-Clones-And-Drones.html">Democracy 3 Clones And Drones</a></li>
@@ -54,10 +56,14 @@
 <li><a href="Me.html">Me</a></li>
 <li><a href="Playing-Music-and-Playing-Games.html">Playing Music and Playing Games</a></li>
 <li><a href="Pwned-10-Tales-of-Appropriation-in-Video-Games.html">Pwned 10 Tales of Appropriation in Video Games</a></li>
+<li><a href="Radio-Flare-REDUX.html">Radio Flare REDUX</a></li>
+<li><a href="Radio-Flare.html">Radio Flare</a></li>
 <li><a href="Secrets-Of-Raetikon.html">Secrets Of Raetikon</a></li>
+<li><a href="Studio-Radiolaris.html">Studio Radiolaris</a></li>
 <li><a href="Todo.html">Todo</a></li>
 <li><a href="Venturing-Into-The-Borderlands-Of-Playfulness.html">Venturing Into The Borderlands Of Playfulness</a></li>
 <li><a href="Yet-It-Moves.html">Yet It Moves</a></li>
+<li><a href="Zombies-vs-Sheep.html">Zombies vs Sheep</a></li>
 </ul></div>
         <div class="two columns">&nbsp;</div>
       </div>
