--- a/Radio-Flare.html
+++ b/Radio-Flare.html
@@ -21,7 +21,7 @@
     <script src="/javascript/jquery.tabs.js" type="text/javascript"></script>
     <script src="/javascript/gollum.js" type="text/javascript"></script>
     <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
-    <title>Assembling a Mosaic of the Future The Post Nuclear World of Fallout 3</title>
+    <title>Radio Flare</title>
   </head>
 
   <body>
@@ -32,25 +32,32 @@
             <a href="/Home.html"><div id="header">&nbsp;
             </div></a>
             <hr />
-            <h4>Assembling a Mosaic of the Future The Post Nuclear World of Fallout 3</h4>
+            <h4>Radio Flare</h4>
             <hr />
         </div>
         <div class="two columns">&nbsp;</div>
       </div>
       <div class="row">
         <div class="two columns">&nbsp;</div>
-        <div class="eight columns"><p>A stroll through the history of the atomic age and the wasteland of Fallout 3</p>
+        <div class="eight columns"><p>Radio Flare is an iOS musical action game that we created as <a href="Studio-Radiolaris.html">studio radiolaris</a> in 2008. It was the dawn of the App Store and we managed to get nominated for IGF as well as IndieCade with this project.</p>
 
-<p><img src="img/papers/Fallout3.jpg" alt="Operation Crossroads">
-<a href="http://en.wikipedia.org/wiki/Nuclear_weapons_testing#/media/File:Operation_Crossroads_Baker_Edit.jpg">Image Source</a></p>
+<p><img src="img/projects/radio-flare-0.jpg" alt="Radio Flare 0"></p>
 
 <blockquote>
-<p>The Manhattan Project succeeded in building a nuclear bomb after three quick years of research. The United States rushed the program in order to get a lead on their competitors in this arms race. Germany was supposedly already close to building its own bomb. Yet even the inventors of the first atomic bomb were overwhelmed by its destructive power. J. Robert Oppenheimer cited ... the Bhagavad-Gita "I am become death, the destroyer of worlds." upon witnessing the first test explosion.</p>
+<p>RADIO FLARE is the first and only musical shooter for the iPhone. It's a shoot 'em up where everything is tied to the interactive music track by Berlin-based musician DJ Glow.</p>
 </blockquote>
 
-<p>Pichlmair, M. 2009, Assembling a Mosaic of the Future: The Post-Nuclear World of Fallout 3. Eludamos. Journal for Computer Game Culture. 2009; 3 (1), p. 107-113</p>
+<p><img src="img/projects/radio-flare-1.jpg" alt="Radio Flare 1"></p>
 
-<p><a href="http://www.eludamos.org/index.php/eludamos/article/view/vol3no1-12/120">Read</a></p>
+<blockquote>
+<p>You sweep the screen with your right thumb to target enemies, while steering with your left. Enemies explode into blinking red radio flares in rhythm with the sound track. Collect them to proceed. Wave after wave of enemies awaits you until you finally approach the boss enemy.</p>
+
+<p>RADIO FLARE is a meditative trance experience and an action-packed shooter at the same time.</p>
+</blockquote>
+
+<p><img src="img/projects/radio-flare-2.png" alt="Radio Flare 2"></p>
+
+<p><a href="https://itunes.apple.com/en/app/radio-flare-classic/id299937094?mt=8">Download</a></p>
 </div>
         <div class="two columns">&nbsp;</div>
       </div>
