--- a/Radio-Flare-REDUX.html
+++ b/Radio-Flare-REDUX.html
@@ -21,7 +21,7 @@
     <script src="/javascript/jquery.tabs.js" type="text/javascript"></script>
     <script src="/javascript/gollum.js" type="text/javascript"></script>
     <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
-    <title>Assembling a Mosaic of the Future The Post Nuclear World of Fallout 3</title>
+    <title>Radio Flare REDUX</title>
   </head>
 
   <body>
@@ -32,25 +32,41 @@
             <a href="/Home.html"><div id="header">&nbsp;
             </div></a>
             <hr />
-            <h4>Assembling a Mosaic of the Future The Post Nuclear World of Fallout 3</h4>
+            <h4>Radio Flare REDUX</h4>
             <hr />
         </div>
         <div class="two columns">&nbsp;</div>
       </div>
       <div class="row">
         <div class="two columns">&nbsp;</div>
-        <div class="eight columns"><p>A stroll through the history of the atomic age and the wasteland of Fallout 3</p>
+        <div class="eight columns"><p>Radio Flare REDUX was a relaunch of the original <a href="Radio-Flare.html">Radio Flare</a>. A franctic music shooter full of abstract special effects.</p>
 
-<p><img src="img/papers/Fallout3.jpg" alt="Operation Crossroads">
-<a href="http://en.wikipedia.org/wiki/Nuclear_weapons_testing#/media/File:Operation_Crossroads_Baker_Edit.jpg">Image Source</a></p>
+<p><img src="img/projects/REDUX0.JPG" alt="Radio Flare REDUX 0">
+<img src="img/projects/REDUX1.PNG" alt="Radio Flare REDUX 1"></p>
 
 <blockquote>
-<p>The Manhattan Project succeeded in building a nuclear bomb after three quick years of research. The United States rushed the program in order to get a lead on their competitors in this arms race. Germany was supposedly already close to building its own bomb. Yet even the inventors of the first atomic bomb were overwhelmed by its destructive power. J. Robert Oppenheimer cited ... the Bhagavad-Gita "I am become death, the destroyer of worlds." upon witnessing the first test explosion.</p>
+<p>Radio Flare REDUX HD is a highly stylized side-scrolling shoot-’em-up that makes exceptional use of your iPad’s multi-touch capabilities, not to mention its headphone socket.</p>
 </blockquote>
 
-<p>Pichlmair, M. 2009, Assembling a Mosaic of the Future: The Post-Nuclear World of Fallout 3. Eludamos. Journal for Computer Game Culture. 2009; 3 (1), p. 107-113</p>
+<p><img src="img/projects/REDUX2.JPG" alt="Radio Flare REDUX 2">
+<img src="img/projects/REDUX3.JPG" alt="Radio Flare REDUX 3"></p>
 
-<p><a href="http://www.eludamos.org/index.php/eludamos/article/view/vol3no1-12/120">Read</a></p>
+<blockquote>
+<p>Pilot your ship to the beat of the universe and blast a galaxy of invaders out of the sky. Weave through an intense sensory onslaught as you dispatch swarm after swarm of enemies, tapping the touchscreen, and your toes, as you go.</p>
+</blockquote>
+
+<p><img src="img/projects/REDUX4.PNG" alt="Radio Flare REDUX 4">
+<img src="img/projects/REDUX5.JPG" alt="Radio Flare REDUX 5"></p>
+
+<blockquote>
+<p>Radio Flare REDUX HD adds stunning high-definition iPad-only visuals to the immersive experience of its iPhone counterpart. REDUX is the hotly anticipated successor to the hit debut from studio radiolaris, Radio Flare, which was a finalist in the 2009 IGF Mobile and IndieCade competitions.</p>
+</blockquote>
+
+<p><img src="img/projects/REDUX6.JPG" alt="Radio Flare REDUX 6">
+<img src="img/projects/REDUX7.JPG" alt="Radio Flare REDUX 7">
+<img src="img/projects/REDUX8.JPG" alt="Radio Flare REDUX 8"></p>
+
+<p><a href="https://itunes.apple.com/en/app/radio-flare-redux-hd/id364245714?mt=8">Download</a></p>
 </div>
         <div class="two columns">&nbsp;</div>
       </div>
