--- a/Studio-Radiolaris.html
+++ b/Studio-Radiolaris.html
@@ -21,7 +21,7 @@
     <script src="/javascript/jquery.tabs.js" type="text/javascript"></script>
     <script src="/javascript/gollum.js" type="text/javascript"></script>
     <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
-    <title>Assembling a Mosaic of the Future The Post Nuclear World of Fallout 3</title>
+    <title>Studio Radiolaris</title>
   </head>
 
   <body>
@@ -32,25 +32,16 @@
             <a href="/Home.html"><div id="header">&nbsp;
             </div></a>
             <hr />
-            <h4>Assembling a Mosaic of the Future The Post Nuclear World of Fallout 3</h4>
+            <h4>Studio Radiolaris</h4>
             <hr />
         </div>
         <div class="two columns">&nbsp;</div>
       </div>
       <div class="row">
         <div class="two columns">&nbsp;</div>
-        <div class="eight columns"><p>A stroll through the history of the atomic age and the wasteland of Fallout 3</p>
+        <div class="eight columns"><p><img src="img/projects/radiolaris-logo.png" alt="Radiolaris Logo"></p>
 
-<p><img src="img/papers/Fallout3.jpg" alt="Operation Crossroads">
-<a href="http://en.wikipedia.org/wiki/Nuclear_weapons_testing#/media/File:Operation_Crossroads_Baker_Edit.jpg">Image Source</a></p>
-
-<blockquote>
-<p>The Manhattan Project succeeded in building a nuclear bomb after three quick years of research. The United States rushed the program in order to get a lead on their competitors in this arms race. Germany was supposedly already close to building its own bomb. Yet even the inventors of the first atomic bomb were overwhelmed by its destructive power. J. Robert Oppenheimer cited ... the Bhagavad-Gita "I am become death, the destroyer of worlds." upon witnessing the first test explosion.</p>
-</blockquote>
-
-<p>Pichlmair, M. 2009, Assembling a Mosaic of the Future: The Post-Nuclear World of Fallout 3. Eludamos. Journal for Computer Game Culture. 2009; 3 (1), p. 107-113</p>
-
-<p><a href="http://www.eludamos.org/index.php/eludamos/article/view/vol3no1-12/120">Read</a></p>
+<p>Studio Radiolaris was the name of a company I've founded with <a href="http://igw.tuwien.ac.at/hci/index.php/people/107-fares-kayali">Fares Kayali</a> in 2009. Together, we've released three iPhone games: <a href="Radio-Flare.html">Radio Flare</a>, <a href="Zombies-vs-Sheep.html">Zombies vs. Sheep</a> and <a href="Radio-Flare-REDUX.html">Radio Flare REDUX</a>.</p>
 </div>
         <div class="two columns">&nbsp;</div>
       </div>
