--- a/Zombies-vs-Sheep.html
+++ b/Zombies-vs-Sheep.html
@@ -21,7 +21,7 @@
     <script src="/javascript/jquery.tabs.js" type="text/javascript"></script>
     <script src="/javascript/gollum.js" type="text/javascript"></script>
     <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
-    <title>Assembling a Mosaic of the Future The Post Nuclear World of Fallout 3</title>
+    <title>Zombies vs Sheep</title>
   </head>
 
   <body>
@@ -32,25 +32,36 @@
             <a href="/Home.html"><div id="header">&nbsp;
             </div></a>
             <hr />
-            <h4>Assembling a Mosaic of the Future The Post Nuclear World of Fallout 3</h4>
+            <h4>Zombies vs Sheep</h4>
             <hr />
         </div>
         <div class="two columns">&nbsp;</div>
       </div>
       <div class="row">
         <div class="two columns">&nbsp;</div>
-        <div class="eight columns"><p>A stroll through the history of the atomic age and the wasteland of Fallout 3</p>
+        <div class="eight columns"><p>Zombies vs. Sheep is a shooting gallery for iOS that we've made as <a href="Studio-Radiolaris.html">studio radiolaris</a> in 2009.</p>
 
-<p><img src="img/papers/Fallout3.jpg" alt="Operation Crossroads">
-<a href="http://en.wikipedia.org/wiki/Nuclear_weapons_testing#/media/File:Operation_Crossroads_Baker_Edit.jpg">Image Source</a></p>
+<p><img src="img/projects/zombies-vs-sheep-0.PNG" alt="Zombies vs Sheep 0"></p>
 
 <blockquote>
-<p>The Manhattan Project succeeded in building a nuclear bomb after three quick years of research. The United States rushed the program in order to get a lead on their competitors in this arms race. Germany was supposedly already close to building its own bomb. Yet even the inventors of the first atomic bomb were overwhelmed by its destructive power. J. Robert Oppenheimer cited ... the Bhagavad-Gita "I am become death, the destroyer of worlds." upon witnessing the first test explosion.</p>
+<p>Zombies vs. Sheep is a frenetic tap-to-shoot game set in a mexican-themed shooting gallery. Your mission: Protect the sheep from incoming waves of zombies. As the evening gets darker you will face more and stronger enemies. You are the last hope of the sheep.</p>
 </blockquote>
 
-<p>Pichlmair, M. 2009, Assembling a Mosaic of the Future: The Post-Nuclear World of Fallout 3. Eludamos. Journal for Computer Game Culture. 2009; 3 (1), p. 107-113</p>
+<p><img src="img/projects/zombies-vs-sheep-1.PNG" alt="Zombies vs Sheep 1"></p>
 
-<p><a href="http://www.eludamos.org/index.php/eludamos/article/view/vol3no1-12/120">Read</a></p>
+<blockquote>
+<p>Move your sheep by tilting the phone. Shoot by tapping the enemies. Reload by quickly flicking the phone in any direction.</p>
+</blockquote>
+
+<p><img src="img/projects/zombies-vs-sheep-2.PNG" alt="Zombies vs Sheep 2"></p>
+
+<blockquote>
+<p>The game features 20 levels and can be played in survival or campaign mode. Be sure to upgrade your sheep in the store to be able to keep up!</p>
+</blockquote>
+
+<p><img src="img/projects/zombies-vs-sheep-3.PNG" alt="Zombies vs Sheep 3"></p>
+
+<p><a href="https://itunes.apple.com/us/app/zombies-vs.-sheep/id322848809?mt=8">Download</a></p>
 </div>
         <div class="two columns">&nbsp;</div>
       </div>
