Fixed images in FAZE

--- a/FAZE.html
+++ b/FAZE.html
@@ -49,13 +49,13 @@
 <li>FAZE.THREE Acoustic Architecture</li>
 </ul>
 
-<p><img src="img/projects/faze0.jpeg" alt="Faze 0">
-<img src="img/projects/faze1.jpeg" alt="Faze 1">
-<img src="img/projects/faze2.jpeg" alt="Faze 2">
-<img src="img/projects/faze3.jpeg" alt="Faze 3">
-<img src="img/projects/faze4.jpeg" alt="Faze 4">
-<img src="img/projects/faze5.jpeg" alt="Faze 5">
-<img src="img/projects/faze6.jpeg" alt="Faze 6"></p>
+<p><img src="img/projects/faze0.jpg" alt="Faze 0">
+<img src="img/projects/faze1.jpg" alt="Faze 1">
+<img src="img/projects/faze2.jpg" alt="Faze 2">
+<img src="img/projects/faze3.jpg" alt="Faze 3">
+<img src="img/projects/faze4.jpg" alt="Faze 4">
+<img src="img/projects/faze5.jpg" alt="Faze 5">
+<img src="img/projects/faze6.jpg" alt="Faze 6"></p>
 
 <p>Images by <a href="http://www.emotionstante.com">Karin Jarnig</a></p>
 
