--- a/Todo.html
+++ b/Todo.html
@@ -62,28 +62,25 @@
 <li>Radio Flare</li>
 <li>Radio Flare REDUX</li>
 <li>Zombies vs. Sheep</li>
+<li>Globetrotters</li>
+<li>The Danish Mountains</li>
+<li>Seven Mile Boots</li>
+<li>Lichtzeile</li>
+<li>Ginkgo</li>
+<li>MGNT 
+– HPST 
+– BLCK</li>
+<li>NVRS</li>
+<li>DIZE</li>
 </ul>
 
 <h2>Pages to add</h2>
 
 <ul>
-<li>Story of Raetikon -&gt; Rename</li>
-<li>Globetrotters</li>
 <li>Dissertation</li>
-<li>MGNT 
-– HPST 
-– BLCK</li>
-<li>The Danish Mountains</li>
-<li>Ocean Floor</li>
-<li>The Silence</li>
-<li>Seven Mile Boots</li>
-<li>Vireal</li>
-<li>Lichtzeile</li>
+<li>Story of Raetikon -&gt; Rename</li>
 <li>PIONEER</li>
 <li>Blek</li>
-<li>Enlightenment</li>
-<li>Red Star</li>
-<li>Ginkgo</li>
 </ul>
 </div>
         <div class="two columns">&nbsp;</div>
@@ -92,7 +89,7 @@
         <div class="two columns">&nbsp;</div>
           <div class="eight columns">
             <div id="footer">
-              <small>2015-04-15 11:41:06</small>
+              <small>2015-04-29 13:54:37</small>
             </div>
           </div>
         <div class="two columns">&nbsp;</div>
