First working iteration of website

--- a/DIZE.html
+++ b/DIZE.html
@@ -39,14 +39,15 @@
       </div>
       <div class="row">
         <div class="two columns">&nbsp;</div>
-        <div class="eight columns"></div>
+        <div class="eight columns"><p>A dice app for iOS that disregards the physical properties of platonic bodies.</p>
+</div>
         <div class="two columns">&nbsp;</div>
       </div>
       <div class="row">
         <div class="two columns">&nbsp;</div>
           <div class="eight columns">
             <div id="footer">
-              <small>2015-04-29 13:54:37</small>
+              <small><!--2015-05-10 12:06:35--></small>
             </div>
           </div>
         <div class="two columns">&nbsp;</div>
