--- a/Ingredients.html
+++ b/Ingredients.html
@@ -82,7 +82,7 @@
         <div class="two columns">&nbsp;</div>
           <div class="eight columns">
             <div id="footer">
-              <small> </small>
+              <small><!-- --></small>
             </div>
           </div>
         <div class="two columns">&nbsp;</div>
