--- a/Seven-Mile-Boots.html
+++ b/Seven-Mile-Boots.html
@@ -59,7 +59,7 @@
         <div class="two columns">&nbsp;</div>
           <div class="eight columns">
             <div id="footer">
-              <small>2015-04-29 13:54:37</small>
+              <small><!--2015-05-10 12:06:35--></small>
             </div>
           </div>
         <div class="two columns">&nbsp;</div>
