--- a/Yet-It-Moves.html
+++ b/Yet-It-Moves.html
@@ -41,6 +41,10 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns"><p>Yet It Moves is a puzzle adventure for iOS based on the widely acclaimed And Yet It Moves that was realized by <a href="http://brokenrul.es">Broken Rules</a> before I had joined.</p>
 
+<p><img src="img/projects/yetitmoves0.png" alt="Image 1">
+<img src="img/projects/yetitmoves1.png" alt="Image 2">
+<img src="img/projects/yetitmoves2.png" alt="Image 3"></p>
+
 <p><a href="https://itunes.apple.com/app/id919968656">Download</a>
 <a href="http://andyetitmoves.net">Download</a></p>
 </div>
@@ -50,7 +54,7 @@
         <div class="two columns">&nbsp;</div>
           <div class="eight columns">
             <div id="footer">
-              <small>2015-04-29 13:54:37</small>
+              <small><!--2015-05-10 12:06:35--></small>
             </div>
           </div>
         <div class="two columns">&nbsp;</div>
