--- a/Approximating-a-Steam-Engine.html
+++ b/Approximating-a-Steam-Engine.html
@@ -58,7 +58,7 @@ Denis Papin and Thomas Savery were steam-engine designers, quick to acquire pate
         <div class="two columns">&nbsp;</div>
           <div class="eight columns">
             <div id="footer">
-              <small>2015-04-29 13:54:37</small>
+              <small><!--2015-05-10 12:06:35--></small>
             </div>
           </div>
         <div class="two columns">&nbsp;</div>
