--- a/Chasing-Aurora.html
+++ b/Chasing-Aurora.html
@@ -58,7 +58,7 @@ Fly your bird to victory in this unique multiplayer action game</em></p>
         <div class="two columns">&nbsp;</div>
           <div class="eight columns">
             <div id="footer">
-              <small>2015-04-29 13:54:37</small>
+              <small><!--2015-05-10 12:06:35--></small>
             </div>
           </div>
         <div class="two columns">&nbsp;</div>
