--- a/Home.html
+++ b/Home.html
@@ -39,7 +39,7 @@
       </div>
       <div class="row">
         <div class="two columns">&nbsp;</div>
-        <div class="eight columns"><p>Welcome to the digital playground of <a href="Me">Martin Pichlmair</a>. This is a place of wonder that will grow over time. A panopticon of interactive experiences may be found in the labyrinthean <a href="Ingredients.html">bowels of this wiki</a>.</p>
+        <div class="eight columns"><p>Welcome to the digital playground of <a href="Me">Martin Pichlmair</a>. This is a place of wonder that will grow over time. A panopticon of interactive experiences may be found in the labyrinthean <a href="Works.html">bowels of this wiki</a>.</p>
 </div>
         <div class="two columns">&nbsp;</div>
       </div>
@@ -47,7 +47,7 @@
         <div class="two columns">&nbsp;</div>
           <div class="eight columns">
             <div id="footer">
-              <small>2015-04-29 13:54:37</small>
+              <small><!--2015-05-10 12:06:35--></small>
             </div>
           </div>
         <div class="two columns">&nbsp;</div>
