--- a/Chasing-Aurora.html
+++ b/Chasing-Aurora.html
@@ -29,7 +29,7 @@
       <div class="row">
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
-            <a href="/Home.html"><div id="header">&nbsp;
+            <a href="/index.html"><div id="header">&nbsp;
             </div></a>
             <hr />
             <h4>Chasing Aurora</h4>
@@ -58,7 +58,7 @@ Fly your bird to victory in this unique multiplayer action game</em></p>
         <div class="two columns">&nbsp;</div>
           <div class="eight columns">
             <div id="footer">
-              <small><!--2015-05-10 12:06:35--></small>
+              <small><!--2015-05-19 12:15:26--></small>
             </div>
           </div>
         <div class="two columns">&nbsp;</div>
