--- a/Works.html
+++ b/Works.html
@@ -29,7 +29,7 @@
       <div class="row">
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
-            <a href="Home.html"><div id="header">&nbsp;
+            <a href="index.html"><div id="header">&nbsp;
             </div></a>
             <hr />
             <h4>Works</h4>
