--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="css/custom.css" type="text/css" charset="utf-8" />
     <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Dosis:400,300,600' rel='stylesheet' type='text/css'>
-    <!-- <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,600' rel="stylesheet" type="text/css"> -->
     <script src="javascript/jquery-1.4.2.min.js" type="text/javascript"></script>
     <script src="javascript/jquery.text_selection-1.0.0.min.js" type="text/javascript"></script>
     <script src="javascript/jquery.previewable_comment_form.js" type="text/javascript"></script>
@@ -29,7 +28,7 @@
       <div class="row">
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
-            <a href="/Home.html"><div id="header">&nbsp;
+            <a href="index.html"><div id="header">&nbsp;
             </div></a>
             <hr />
             <h4 class="text-center">VERTICAL PROGRESS</h4>
@@ -65,16 +64,24 @@
       <div class="row">
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
-        &nbsp;
             <hr />
-            <img src="img/me.jpg" />
+            <h4 class="text-center">MARTIN PICHLMAIR</h4>
+            <hr />
         </div>
         <div class="two columns">&nbsp;</div>
       </div>
 
       <div class="row">
         <div class="two columns">&nbsp;</div>
-        <div class="eight columns"><p>Welcome to the works of <a href="Me.html">Martin Pichlmair</a>, <a href="http://brokenrul.es">game designer</a> and <a href="http://game.itu.dk/index.php/About">academic</a>. There's <a href="Works.html">a lot more</a> to find than what is featured above! Contact me via <a href="http://twitter.com/martinpi">Twitter</a> or 
+        <div class="eight columns">
+            <a href="Me.html"><img src="img/me.jpg" /></a>
+        </div>
+        <div class="two columns">&nbsp;</div>
+      </div>
+
+      <div class="row">
+        <div class="two columns">&nbsp;</div>
+        <div class="eight columns"><p>Hi, I'm <a href="Me.html">Martin Pichlmair</a>, <a href="http://brokenrul.es">game designer</a> and <a href="http://game.itu.dk/index.php/About">academic</a>. <a href="Works.html">Here</a> is the stuff I made – from <a href="Seven-Mile-Boots.html">talking boots</a> and <a href="Chasing-Aurora.html">Wii U launch titles</a> to <a href="Venturing-Into-The-Borderlands-Of-Playfulness.html">papers</a> and <a href="BLCK.html">photography apps</a>! Contact me via <a href="http://twitter.com/martinpi">Twitter</a> or 
 
 <script language="JavaScript"><!-- 
 dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB="&#112;&#105;"
@@ -84,10 +91,69 @@ uCMeEHaipvbToSMnVelHuQPYUCaMcOzhU="&#115;&#101;&#110;&#100; &#109;&#101;&#32;&#9
 mToeyJbcvWPlWIcTlaUvATQteWiSeWNaI="&#115;&#101;&#110;d&#32;&#109;&#101; &#97;&#32;&#109;a&#105;&#108;"
 document.write("<a href='mailto:"+dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB+""+gN+""+Et+"' title='"+mToeyJbcvWPlWIcTlaUvATQteWiSeWNaI+"'>"+uCMeEHaipvbToSMnVelHuQPYUCaMcOzhU+"<\/a>")
 // --></script>.</p>
-</div>
+
+        <div class="table">
+          <div class="tablerow">
+            <div class="tablecell left">Twitter</div>
+            <div class="tablecell right"><a href="http://twitter.com/martinpi">@martinpi</a></div>
+          </div>
+          <div class="tablerow">
+            <div class="tablecell left">e-Mail</div>
+            <div class="tablecell right"><script language="JavaScript"><!-- 
+dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB="&#112;&#105;"
+gN="&#64;"
+Et="&#98;&#114;&#111;&#107;e&#110;&#114;&#117;&#108;.&#101;&#115;"
+uCMeEHaipvbToSMnVelHuQPYUCaMcOzhU="&#115;&#101;&#110;&#100; &#109;&#101;&#32;&#97; &#109;&#97;&#105;&#108;"
+mToeyJbcvWPlWIcTlaUvATQteWiSeWNaI="&#115;&#101;&#110;d&#32;&#109;&#101; &#97;&#32;&#109;a&#105;&#108;"
+document.write("<a href='mailto:"+dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB+""+gN+""+Et+"' title='"+mToeyJbcvWPlWIcTlaUvATQteWiSeWNaI+"'>"+uCMeEHaipvbToSMnVelHuQPYUCaMcOzhU+"<\/a>")
+// --></script></div>
+          </div>
+          <div class="tablerow">
+            <div class="tablecell left">Web</div>
+            <div class="tablecell right"><a href="http://vertical-progress.net">VERTICAL PROGRESS</a></div>
+          </div>
+          <div class="tablerow">
+            <div class="tablecell left">Gamasutra</div>
+            <div class="tablecell right"><a href="http://www.gamasutra.com/blogs/author/MartinPichlmair/518839/">Tech Blog</a></div>
+          </div>
+          <div class="tablerow">
+            <div class="tablecell left">Tumblr</div>
+            <div class="tablecell right"><a href="http://futurumexactum.tumblr.com">Futurum Exactum</a></div>
+          </div>
+          <div class="tablerow">
+            <div class="tablecell left">GitHub</div>
+            <div class="tablecell right"><a href="http://github.com/martinpi/">Code Repository</a></div>
+          </div>
+          <div class="tablerow">
+            <div class="tablecell left">itch.io</div>
+            <div class="tablecell right"><a href="http://martinpi.itch.io">Jams &amp; Experiments</a></div>
+          </div>
+          <div class="tablerow">
+            <div class="tablecell left">Facebook</div>
+            <div class="tablecell right"><a href="http://facebook.com/martin.pichlmair">Public Profile</a></div>
+          </div>
+          <div class="tablerow">
+            <div class="tablecell left">IMDB</div>
+            <div class="tablecell right"><a href="http://www.imdb.com/name/nm6101397/?ref_=fn_al_nm_1">Profile</a></div>
+          </div>
+          <div class="tablerow">
+            <div class="tablecell left">Vine</div>
+            <div class="tablecell right"><a href="https://vine.co/martinpi">Video Feed</a></div>
+          </div>
+          <div class="tablerow">
+            <div class="tablecell left">Academia.edu</div>
+            <div class="tablecell right"><a href="https://itu.academia.edu/pi">Research Base</a></div>
+          </div>
+          <div class="tablerow">
+            <div class="tablecell left">LinkedIn</div>
+            <div class="tablecell right"><a href="https://www.linkedin.com/profile/view?id=6327100">Professional Profile</a></div>
+          </div>
+        </div>
+
+        </div>
+
         <div class="two columns">&nbsp;</div>
       </div>
-
 
       <div class="row">
         <div class="two columns">&nbsp;</div>
