Removed dates, NVRS, MGNT

--- a/Approximating-a-Steam-Engine.html
+++ b/Approximating-a-Steam-Engine.html
@@ -58,7 +58,7 @@ Denis Papin and Thomas Savery were steam-engine designers, quick to acquire pate
         <div class="two columns">&nbsp;</div>
           <div class="eight columns">
             <div id="footer">
-              <small><!--2015-05-19 12:15:26--></small>
+              <small></small>
             </div>
           </div>
         <div class="two columns">&nbsp;</div>
