--- a/Chasing-Aurora.html
+++ b/Chasing-Aurora.html
@@ -58,7 +58,7 @@ Fly your bird to victory in this unique multiplayer action game</em></p>
         <div class="two columns">&nbsp;</div>
           <div class="eight columns">
             <div id="footer">
-              <small><!--2015-05-19 12:15:26--></small>
+              <small></small>
             </div>
           </div>
         <div class="two columns">&nbsp;</div>
