--- a/HPST.html
+++ b/HPST.html
@@ -47,6 +47,8 @@
 <img src="img/projects/HPST1.jpg" alt="Image 1">
 <img src="img/projects/HPST2.jpg" alt="Image 2">
 <img src="img/projects/HPST3.jpg" alt="Image 3"></p>
+
+<p><a href="https://itunes.apple.com/us/app/blck/id981120191?ls=1&amp;mt=8">Download</a></p>
 </div>
         <div class="two columns">&nbsp;</div>
       </div>
@@ -54,7 +56,7 @@
         <div class="two columns">&nbsp;</div>
           <div class="eight columns">
             <div id="footer">
-              <small><!--2015-05-19 12:15:26--></small>
+              <small></small>
             </div>
           </div>
         <div class="two columns">&nbsp;</div>
