--- a/Seven-Mile-Boots.html
+++ b/Seven-Mile-Boots.html
@@ -59,7 +59,7 @@
         <div class="two columns">&nbsp;</div>
           <div class="eight columns">
             <div id="footer">
-              <small><!--2015-05-19 12:15:26--></small>
+              <small></small>
             </div>
           </div>
         <div class="two columns">&nbsp;</div>
