--- a/Works.html
+++ b/Works.html
@@ -61,8 +61,6 @@
 <li><a href="Levels-of-Sound.html">Levels of Sound</a></li>
 <li><a href="Lichtzeile.html">Lichtzeile</a></li>
 <li><a href="Me.html">Me</a></li>
-<li><a href="MGNT.html">MGNT</a></li>
-<li><a href="NVRS.html">NVRS</a></li>
 <li><a href="Playing-Music-and-Playing-Games.html">Playing Music and Playing Games</a></li>
 <li><a href="Pwned-10-Tales-of-Appropriation-in-Video-Games.html">Pwned 10 Tales of Appropriation in Video Games</a></li>
 <li><a href="Radio-Flare-REDUX.html">Radio Flare REDUX</a></li>
@@ -82,7 +80,7 @@
         <div class="two columns">&nbsp;</div>
           <div class="eight columns">
             <div id="footer">
-              <small><!-- --></small>
+              <small></small>
             </div>
           </div>
         <div class="two columns">&nbsp;</div>
