--- a/scaffolding/index.html
+++ b/scaffolding/index.html
@@ -56,8 +56,8 @@
         <div class="two columns icon">&nbsp;</div>
         <div class="two columns icon"><a href="BLCK.html"><img src="img/portfolio/works-8.png"/><br/>BLCK</a></div>
         <div class="two columns icon"><a href="HPST.html"><img src="img/portfolio/works-9.png"/><br/>HPST</a></div>
-        <div class="two columns icon"><a href="MGNT.html"><img src="img/portfolio/works-10.png"/><br/>MGNT</a></div>
-        <div class="two columns icon"><a href="NVRS.html"><img src="img/portfolio/works-11.png"/><br/>NVRS</a></div>
+        <div class="two columns icon">&nbsp;</div>
+        <div class="two columns icon">&nbsp;</div>
         <div class="two columns icon">&nbsp;</div>
       </div>
 
