Added links, removed second headline in index

--- a/BLCK.html
+++ b/BLCK.html
@@ -47,6 +47,8 @@
 <img src="img/projects/BLCK1.jpg" alt="Image 1">
 <img src="img/projects/BLCK2.jpg" alt="Image 2">
 <img src="img/projects/BLCK3.jpg" alt="Image 3"></p>
+
+<p><a href="https://itunes.apple.com/us/app/blck/id981120191?ls=1&amp;mt=8">Download</a></p>
 </div>
         <div class="two columns">&nbsp;</div>
       </div>
