--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="two columns icon">&nbsp;</div>
       </div>
 
-      <div class="row">
+<!--       <div class="row">
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <hr />
@@ -70,10 +70,11 @@
         </div>
         <div class="two columns">&nbsp;</div>
       </div>
-
+ -->
       <div class="row">
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
+            <hr />
             <a href="Me.html"><img src="img/me.jpg" /></a>
         </div>
         <div class="two columns">&nbsp;</div>
