Thinner logo. Added affiliations.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="two columns icon">&nbsp;</div>
         <div class="two columns icon"><a href="BLCK.html"><img src="img/portfolio/works-8.png"/><br/>BLCK</a></div>
         <div class="two columns icon"><a href="HPST.html"><img src="img/portfolio/works-9.png"/><br/>HPST</a></div>
-        <div class="two columns icon">&nbsp;</div>
+        <div class="two columns icon"><a href="Broken-Rules.html"><img src="img/portfolio/works-12.png"/><br/>Broken Rules</a></div>
         <div class="two columns icon">&nbsp;</div>
         <div class="two columns icon">&nbsp;</div>
       </div>
@@ -146,13 +146,37 @@ document.write("<a href='mailto:"+dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB+""+gN+""+
             <div class="tablecell right"><a href="https://itu.academia.edu/pi">Research Base</a></div>
           </div>
           <div class="tablerow">
+            <div class="tablecell left">About.me</div>
+            <div class="tablecell right"><a href="http://about.me/martin.pichlmair">Profile</a></div>
+          </div>
+          <div class="tablerow">
             <div class="tablecell left">LinkedIn</div>
-            <div class="tablecell right"><a href="https://www.linkedin.com/profile/view?id=6327100">Professional Profile</a></div>
+            <div class="tablecell right"><a href="https://www.linkedin.com/profile/view?id=6327100">Profile</a></div>
+          </div>
+        </div>
+
+        <hr />
+
+        <div class="table">
+          <div class="tablerow">
+            <div class="tablecell left">ITU Center for Computer Games Research</div>
+            <div class="tablecell right"><a href="http://game.itu.dk">Faculty Member</a></div>
+          </div>
+          <div class="tablerow">
+            <div class="tablecell left">Broken Rules</div>
+            <div class="tablecell right"><a href="http://brokenrul.es">Co-Founder</a></div>
+          </div>
+          <div class="tablerow">
+            <div class="tablecell left">Games Austria</div>
+            <div class="tablecell right"><a href="http://gamesaustria.com">Advisory Board</a></div>
+          </div>
+          <div class="tablerow">
+            <div class="tablecell left">Central European Games Conference</div>
+            <div class="tablecell right"><a href="http://www.cegconf.com">Advisory Board</a></div>
           </div>
         </div>
 
         </div>
-
         <div class="two columns">&nbsp;</div>
       </div>
 
