BR logo & text updated

--- a/Broken-Rules.html
+++ b/Broken-Rules.html
@@ -41,7 +41,9 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns"><h2>An indie team</h2>
 
-<p>Broken Rules is the team and company I've been part of since roughly a year after its inception. Broken Rules is Clemens, Felix, Jan, Peter and me. It's a platform for indie game development as well as a shared office space in Vienna. Broken Rules is a company as much as a hobby and as a conviction.</p>
+<p>Broken Rules is the team and company I've been part of since roughly a year after its inception. Broken Rules is Clemens, Felix, Jan, Peter and me. It's a platform for indie game development and a shared office space in Vienna. </p>
+
+<p>Broken Rules is a company as much as hobby and conviction.</p>
 
 <p><a href="http://brokenrul.es">Read more</a></p>
 </div>
