--- a/index.html
+++ b/index.html
@@ -189,6 +189,15 @@ document.write("<a href='mailto:"+dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB+""+gN+""+
           </div>
         <div class="two columns">&nbsp;</div>
       </div>
+
+      <div class="row">
+        <div class="two columns">&nbsp;</div>
+        <div class="eight columns">
+            <a href="index.html"><div id="header">&nbsp;</div></a>
+        </div>
+        <div class="two columns">&nbsp;</div>
+      </div>
+
     </div>
   </body>
 </html>
