--- a/A-Game-of-Skill-and-Timing.html
+++ b/A-Game-of-Skill-and-Timing.html
@@ -96,9 +96,10 @@
       <div class="row">
         <div class="two columns">&nbsp;</div>
           <div class="eight columns">
-            <div id="footer">
-              <small></small>
-            </div>
+            <a href="index.html"><div id="footer">
+              <small>VERTICAL PROGRESS</br></small>
+              </div>
+            </a>
           </div>
         <div class="two columns">&nbsp;</div>
       </div>
