--- a/Chasing-Aurora.html
+++ b/Chasing-Aurora.html
@@ -57,9 +57,10 @@ Fly your bird to victory in this unique multiplayer action game</em></p>
       <div class="row">
         <div class="two columns">&nbsp;</div>
           <div class="eight columns">
-            <div id="footer">
-              <small></small>
-            </div>
+            <a href="index.html"><div id="footer">
+              <small>VERTICAL PROGRESS</br></small>
+              </div>
+            </a>
           </div>
         <div class="two columns">&nbsp;</div>
       </div>
