--- a/Chasing-Aurora.html
+++ b/Chasing-Aurora.html
@@ -57,10 +57,7 @@ Fly your bird to victory in this unique multiplayer action game</em></p>
       <div class="row">
         <div class="two columns">&nbsp;</div>
           <div class="eight columns">
-            <a href="index.html"><div id="footer">
-              <small>VERTICAL PROGRESS</br></small>
-              </div>
-            </a>
+            <a href="index.html"><div id="footer">&nbsp;</div></a>
           </div>
         <div class="two columns">&nbsp;</div>
       </div>
