--- a/Me.html
+++ b/Me.html
@@ -46,10 +46,7 @@
       <div class="row">
         <div class="two columns">&nbsp;</div>
           <div class="eight columns">
-            <a href="index.html"><div id="footer">
-              <small>VERTICAL PROGRESS</br></small>
-              </div>
-            </a>
+            <a href="index.html"><div id="footer">&nbsp;</div></a>
           </div>
         <div class="two columns">&nbsp;</div>
       </div>
